--- a/src/components/shared/addItem/addItemElement.module.css
+++ b/src/components/shared/addItem/addItemElement.module.css
@@ -1,3 +1,7 @@
+.container{
+  display: flex;
+  flex-direction: column;
+}
 .addListChild {
     border: 0;
     font-family: Inter;
@@ -11,6 +15,10 @@
     align-items: center;
     justify-content: flex-start;
     outline: 0;
+  }
+
+  .error{
+    border: 1px solid red;
   }
   .iconPlus {
     position: relative;
